# refcheck

./: .env.example  .gitignore  README.md  packages.txt  pyproject.toml  streamlit_app.py
docs/: manual-test-checklist.md
docs/superpowers/plans/: 2026-04-14-reference-verification-plan-1-core-pipeline.md  2026-04-14-reference-verification-plan-2-streamlit-ui.md  2026-05-03-agent-only-with-websearch-and-fulltext.md
docs/superpowers/specs/: 2026-04-14-reference-verification-tool-design.md  2026-05-03-agent-only-with-websearch-and-fulltext-design.md
src/refcheck/: __main__.py  _match.py  cli.py  pipeline.py
tests/e2e/: test_e2e_agent_mode.py  test_e2e_injected_errors.py
tests/integration/: test_agent_content.py  test_agent_metadata.py  test_citation_extractor.py  test_cli.py  test_content_verify.py  test_crossref.py  test_crossref_loose_match.py  test_openalex.py  test_pipeline.py  test_pubmed.py  test_reference_parser.py  test_semantic_scholar.py  test_source_fetcher.py  test_streamlit_app.py  test_unpaywall.py  test_verify_metadata.py
tests/unit/: test_agent_runner.py  test_aggregator.py  test_aggregator_dedupe.py  test_cache.py  test_citation_helpers.py  test_evidence_validator.py  test_full_text.py  test_full_text_validation.py  test_html_exporter.py  test_json_exporter.py  test_linker.py  test_llm_client.py  test_markdown_exporter.py  test_match.py  test_matching.py  test_pdf_exporter.py  test_pdf_reader.py  test_progress.py  test_renderer.py  test_schema.py  test_section_splitter.py  test_text_normalizer.py  test_tools_dispatcher.py  test_web_search.py
(+44 files in other folders)
