[project]
name = "refcheck"
version = "0.1.0"
description = "LLM 학술 초안 참고문헌 검증 도구"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "openai>=1.30",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.8",
    "beautifulsoup4>=4.12",
    "streamlit>=1.32",
    "weasyprint>=62",
    "markdown>=3.6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "responses>=0.25",
    "pytest-cov>=5.0",
    "reportlab>=4.0",
]

[project.scripts]
refcheck = "refcheck.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live: requires live API calls (costs money)",
]
